[package]
name = "drep"
version = "0.1.2"
authors = ["Zohaib Sibte Hassan <zohaibsh@gmail.com>"]
edition = "2018"
description = "drep is grep with dynamic reloadable filter expressions. This allows filtering stream of logs/lines, while changing filters on the fly."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3.15"
notify = "4.0.12"
parking_lot = "0.11"